k8s/mn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmacia-deployment
  labels:
    app: backend
spec:
  replicas: 10
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: farmacia
          image: lpmezuraro/farmacia:v19
          ports:
            - containerPort: 8085
