k8s/mn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: farmacia-service
  labels:
    app: farmacia
spec:
  type: NodePort
  ports:
   - port: 8085
     nodePort: 30002
     name: http
  selector:
   app: farmacia
